add Category table

--- a/.env
+++ b/.env
@@ -19,6 +19,11 @@ APP_ENV=dev
 APP_SECRET=52b1361b362f793b3e059bf96b7c0845
 ###< symfony/framework-bundle ###
 
+DOCKER_PROJECT_NAME=book
+DOCKER_NGINX_PORT=8888
+DOCKER_DATABASE_PORT=3401
+DATABASE_PASSWORD=233sKWYqktz9bKLz
+
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
@@ -26,7 +31,8 @@ APP_SECRET=52b1361b362f793b3e059bf96b7c0845
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL=mysql://root:${DATABASE_PASSWORD}@${DOCKER_PROJECT_NAME}_mysql:3306/${DOCKER_PROJECT_NAME}
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
